Fixed index, Fixed vspacing.

--- a/css/template.less
+++ b/css/template.less
@@ -75,7 +75,7 @@ footer {
 }
 
 .vspacing{ /* Vertical Spacing */
-    padding:1em 0em 1em 0em;
+    padding:.5em 0em .5em 0em;
 }
 
 .border{
@@ -144,7 +144,7 @@ div.topBar{
     border-radius:@borderRadius;
     padding:@textPadding;
     box-shadow:inset 0px 0px 3px @lightGray;
-    border:0px;
+    border: 5px solid rgba(0,0,0,0);
 }
 
 input{
